--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@
 <h1>Abdul Aziz Sahraee</h1>
 <p>Mtech 2nd year CSE student at Reva University</p>
 <p><a href="mailme:azizkochai10@gmail.com">Email:azizkochai10@gmail.com</a></p>
+<p><a href="https://www.facebook.com/abdulaziz.sahraee">facebook</a></p>
 <h2>Portfolio</h2>
 <p><a href="https://github.com/azizkochai">GitHub:https://github.com/azizkochai</a></p>
 <h2>Education</h2>
@@ -26,6 +27,6 @@
 
 <footer>
 	<hr>
-	<p> <a href="html.html">Back to my portal</a></p>
+	<p> <a href="index.html">Back to my portal</a></p>
 </footer>
 </html>
