--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Abdul Aziz Sahraee</title>
     <link rel="stylesheet" type="text/css" href="css/master.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/b78db2dffd.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<img src="image/khan.jpg" alt="Aziz" width="40%">
@@ -14,8 +15,8 @@ I have completed my btech at NIT bhopal in 2019 </p>
 <h2>Credentials and portfolio </h2>
 <p><a href="resume.html">My Resume</a> / <a href="https://github.com/azizkochai">My GitHub </p></a>
 <h2>Contact</h2>
-<p>Email:<a href="mailto:azizkochai10@gmail.com"> azizkochai10@gmail.com </a></p>
-
+<p><i class="fas fa-envelope"></i> &nbsp <a href="mailme:azizkochai10@gmail.com">azizkochai10@gmail.com</a></p>
+<p><i class="fas fa-phone"></i> &nbsp <a href="tell:00918989870164">+918989870164</a></p>
 </body>
 <footer>
     <hr>
