--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 	<title>My resume</title>
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<script src="https://kit.fontawesome.com/b78db2dffd.js" crossorigin="anonymous"></script>
 </head>
 <header>
 	<code>Welcome to my resume</code>
@@ -13,10 +14,12 @@
 <img src="image/resume.jpg" alt="My photo" width="15%">
 <h1>Abdul Aziz Sahraee</h1>
 <p>Mtech 2nd year CSE student at Reva University</p>
-<p><a href="mailme:azizkochai10@gmail.com">Email:azizkochai10@gmail.com</a></p>
-<p><a href="https://www.facebook.com/abdulaziz.sahraee">facebook</a></p>
+
+<p><i class="fas fa-envelope"></i> &nbsp <a href="mailto:azizkochai10@gmail.com">Email</a></p>
+<p><i class="fab fa-facebook-square"></i> &nbsp <a href="https://www.facebook.com/abdulaziz.sahraee"> Facebook</a></p>
+
 <h2>Portfolio</h2>
-<p><a href="https://github.com/azizkochai">GitHub:https://github.com/azizkochai</a></p>
+<p><i class="fab fa-github"></i> &nbsp <a href="https://github.com/azizkochai">GitHub</a></p>
 <h2>Education</h2>
 <p>did my 12th at Ghulam Muhammad Ghubar High school</p>
 <p>did my btech CSE at NIT bhopal</p>
@@ -27,6 +30,6 @@
 
 <footer>
 	<hr>
-	<p> <a href="index.html">Back to my portal</a></p>
+	<p> <i class="far fa-hand-point-left"></i> <a href="index.html">Back to my portal</a></p>
 </footer>
 </html>
