--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 <p>did my btech CSE at NIT bhopal</p>
 <p>doing my mtech CSE at Reva university</p>
 <h2>Proffessional Experiences</h2>
-<p>CEO of Solid House from 2013 to 2015</p>
+<p>CEO of Solid House</p>
 </body>
 
 <footer>
